Fix notification vertical alignment

--- a/src/layouts/Header/header.module.css
+++ b/src/layouts/Header/header.module.css
@@ -38,12 +38,13 @@
 .notification {
   height: 20px;
   width: 20px;
-  border-radius: 0px;
   background: var(--primaryColor);
   color: white;
   border-radius: 50%;
-  padding: 2px;
+  padding: 2px 4px;
   margin: 0px 4px;
+  position: relative; 
+  top: -0.5em;
 }
 
 .logoutWrapper {
